<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">K-9 Mail</string>
    <string name="beta_app_name">K-9 Mail BETA</string>
    <string name="app_authors">Google, The K-9 Dog Walkers.</string>
    <string name="app_copyright_fmt">Copyright 2008-<xliff:g>%s</xliff:g> The K-9 Dog Walkers. Portions Copyright 2006-<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="app_htmlcleaner_license">&lt;p>HtmlCleaner is distributed under BSD License. It gives the freedom for anyone to use, explore, modify, and distribute HtmlCleaner, but without any warranty.&lt;/p>&lt;p>Copyright (c) 2006-2011, HtmlCleaner team.&lt;br>All rights reserved.&lt;/p>&lt;p>Redistribution and use of this software in source and binary forms, with or without modification, are permitted provided that the following conditions are met:&lt;/p>&lt;p>&lt;ul>&lt;li>Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.&lt;/li>&lt;li>Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.&lt;/li>&lt;li>The name of HtmlCleaner may not be used to endorse or promote products derived from this software without specific prior written permission.&lt;/li>&lt;/ul>&lt;/p>&lt;p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS \"AS IS\" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.&lt;/p></string>
    <string name="app_authors_fmt">Authors: <xliff:g id="app_authors">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries">We\'re using the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_emoji_icons">Emoji icons: <xliff:g id="app_emoji_icons_link">%s</xliff:g></string>
    <string name="read_attachment_label">read Email attachments</string>
    <string name="read_attachment_desc">Allows this application to read your Email attachments.</string>
    <string name="read_messages_label">read Emails</string>
    <string name="read_messages_desc">Allows this application to read your Emails.</string>
    <string name="delete_messages_label">Delete Emails</string>
    <string name="delete_messages_desc">Allows this application to delete your Emails.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="accounts_title">Accounts</string>
    <string name="advanced">Advanced</string>
    <string name="folder_list_title"><xliff:g id="account">%s</xliff:g> </string>
    <string name="shortcuts_title">K-9 Accounts</string>
    <string name="message_list_title"><xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g> </string>
    <string name="compose_title">Compose</string>
    <string name="debug_title">Debug</string>
    <string name="choose_folder_title">Choose Folder</string>
    <string name="choose_color_title">Choose a Color</string>
    <string name="activity_header_format"><xliff:g id="activity_prefix">%s</xliff:g><xliff:g id="unread_count">%s</xliff:g><xliff:g id="operation">%s</xliff:g></string>
    <string name="activity_unread_count">\u0020[<xliff:g id="unread_count">%d</xliff:g>]</string>
    <string name="status_loading_account_folder">\u0020(Poll <xliff:g id="account">%s</xliff:g>:<xliff:g id="folder">%s</xliff:g><xliff:g id="progress">%s</xliff:g>)</string>
    <string name="reply_action">Reply</string>
    <string name="reply_all_action">Reply all</string>
    <string name="delete_action">Delete</string>
    <string name="archive_action">Archive</string>
    <string name="spam_action">Spam</string>
    <string name="forward_action">Forward</string>
    <string name="move_action">Move</string>
    <string name="refresh_action">Refresh</string>
    <string name="check_mail_action">Check mail</string>
    <string name="send_messages_action">Send messages</string>
    <string name="list_folders_action">Folder list</string>
    <string name="refresh_folders_action">Refresh folders</string>
    <string name="filter_folders_action">Find folder</string>
    <string name="mark_all_as_read_action">Mark all messages as read</string>
    <string name="add_account_action">Add account</string>
    <string name="compose_action">Compose</string>
    <string name="search_action">Search</string>
    <string name="preferences_action">Settings</string>
    <string name="open_action">Open</string>
    <string name="account_settings_action">Account settings</string>
    <string name="folder_settings_action">Folder settings</string>
    <string name="global_settings_action">Global settings</string>
    <string name="remove_account_action">Remove account</string>
    <string name="clear_pending_action">Clear pending actions (danger!)</string>
    <string name="accounts_action">Accounts</string>
    <string name="mark_as_read_action">Mark as read</string>
    <string name="send_alternate_action">Share</string>
    <string name="flag_action">Add star</string>
    <string name="copy_action">Copy</string>
    <string name="select_text_action">Select text</string>
    <string name="mark_as_unread_action">Mark as unread</string>
    <string name="empty_trash_action">Empty Trash</string>
    <string name="expunge_action">Expunge</string>
    <string name="reverse_sort_action">Reverse sort</string>
    <string name="about_action">About</string>
    <string name="debug_enable_debug_logging_title">Enable debug logging</string>
    <string name="debug_enable_debug_logging_summary">Log extra diagnostic information</string>
    <string name="debug_enable_sensitive_logging_title">Log sensitive information</string>
    <string name="debug_enable_sensitive_logging_summary">May show passwords in logs.</string>
    <string name="global_settings_flag_label">Show stars</string>
    <string name="global_settings_flag_summary">Stars indicate flagged messages</string>
    <string name="global_settings_checkbox_label">Multi-select checkboxes</string>
    <string name="global_settings_checkbox_summary">Always show multi-select checkboxes</string>
    <string name="global_settings_touchable_label">Message previews</string>
    <string name="global_settings_touchable_summary">Roomier list items with message previews</string>
    <string name="global_settings_messageview_fixedwidth_label">Fixed-width fonts</string>
    <string name="global_settings_messageview_fixedwidth_summary">Use a fixed-width font when showing plain-text messages</string>
    <string name="global_settings_messageview_return_to_list_label">Return to list after delete</string>
    <string name="global_settings_messageview_return_to_list_summary">Return to message list after message deletion</string>
    <string name="compact_action">Compact</string>
    <string name="clear_action">Clear messages (danger!)</string>
    <string name="recreate_action">Recreate data (Last Resort!)</string>
    <string name="sort_by">Sort by...</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_arrival">Arrival</string>
    <string name="sort_by_sender">Sender</string>
    <string name="sort_by_subject">Subject</string>
    <string name="sort_by_flag">Star</string>
    <string name="sort_by_unread">Read/unread</string>
    <string name="sort_by_attach">Attachments</string>
    <string name="folder_list_display_mode_label">Folders</string>
    <string name="folder_list_display_mode_all">Display all folders</string>
    <string name="folder_list_display_mode_first_class">Display only 1st Class folders</string>
    <string name="folder_list_display_mode_first_and_second_class">Display 1st and 2nd Class folders</string>
    <string name="folder_list_display_mode_not_second_class">Display all except 2nd Class folders</string>
    <string name="display_preferences">Display</string>
    <string name="debug_preferences">Debugging</string>
    <string name="accountlist_preferences">Account list</string>
    <string name="messagelist_preferences">Message lists</string>
    <string name="messageview_preferences">Messages</string>
    <string name="settings_theme_label">Theme</string>
    <string name="settings_language_label">Language</string>
    <string name="background_ops_label">Background sync</string>
    <string name="date_format_label">Date format</string>
    <string name="batch_ops">Batch Ops</string>
    <string name="batch_delete_op">Delete selected</string>
    <string name="batch_mark_read_op">Mark selected read</string>
    <string name="batch_mark_unread_op">Mark selected unread</string>
    <string name="batch_flag_op">Add star to selected</string>
    <string name="batch_unflag_op">Remove star from selected</string>
    <string name="batch_archive_op">Move selected to Archive</string>
    <string name="batch_spam_op">Move selected to Spam</string>
    <string name="batch_move_op">Move selected</string>
    <string name="batch_copy_op">Copy selected</string>
    <string name="batch_flag_mode">Star mode</string>
    <string name="batch_plain_mode">Plain mode</string>
    <string name="batch_select_all">Select all</string>
    <string name="batch_deselect_all">Clear all selections</string>
    <string name="animations_title">Animation</string>
    <string name="animations_summary">Use gaudy visual effects</string>
    <string name="gestures_title">Gestures</string>
    <string name="gestures_summary">Accept gesture control</string>
    <string name="volume_navigation_title">Volume key navigation</string>
    <string name="volume_navigation_summary">Flip through items using the volume controls</string>
    <string name="manage_back_title">Manage \"Back\" button</string>
    <string name="manage_back_summary">Make \"Back\" always go up a level</string>
    <string name="start_integrated_inbox_title">Start in Unified Inbox</string>
    <string name="start_integrated_inbox_summary">Show the Unified Inbox after startup</string>
    <string name="measure_accounts_title">Show account size</string>
    <string name="measure_accounts_summary">Turn off for faster display</string>
    <string name="count_search_title">Count search results</string>
    <string name="count_search_summary">Turn off for faster display</string>
    <string name="font_size_settings_title">Font size</string>
    <string name="font_size_settings_description">Configure font size</string>
    <string name="miscellaneous_preferences">Miscellaneous</string>
    <string name="misc_preferences_attachment_title">Use Gallery bug work-around</string>
    <string name="misc_preferences_attachment_description">Show buttons to add image/video attachments (to work around a Gallery 3D bug)</string>
    <string name="settings_export_account">Export account settings</string>
    <string name="manage_accounts_move_up_action">Move up</string>
    <string name="manage_accounts_move_down_action">Move down</string>
</resources>