<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/check_mail"
        android:title="@string/check_mail_action"
        android:showAsAction="always"
        android:icon="?attr/iconActionRefresh" />

    <item android:id="@+id/empty_trash"
        android:title="@string/empty_trash_action"
        android:showAsAction="always"
        android:icon="?attr/iconActionDelete" />

    <item android:id="@+id/edit_account"
        android:title="@string/account_settings_action"
        android:showAsAction="always"
        android:icon="?attr/iconActionSettings"/>

    <item
        android:id="@+id/compact"
        android:title="@string/compact_action"
        android:showAsAction="never"/>
    <item
        android:id="@+id/clear"
        android:title="@string/clear_action"
        android:showAsAction="never"/>
    <item
        android:id="@+id/recreate"
        android:title="@string/recreate_action"
        android:showAsAction="never"/>
    <item
        android:id="@+id/delete_account"
        android:title="@string/remove_account_action"
        android:showAsAction="never"/>
    <item
        android:id="@+id/clear_pending"
        android:title="@string/clear_pending_action"
        android:showAsAction="never"/>
    <item
        android:id="@+id/export"
        android:title="@string/settings_export_account"
        android:showAsAction="never"/>
    <item
        android:id="@+id/move_up"
        android:title="@string/manage_accounts_move_up_action"
        android:showAsAction="never"/>
    <item
        android:id="@+id/move_down"
        android:title="@string/manage_accounts_move_down_action"
        android:showAsAction="never"/>

</menu>
