<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/check_mail"
        android:alphabeticShortcut="r"
        android:icon="?attr/iconActionRefresh"
        android:showAsAction="always"
        android:title="@string/check_mail_action"/>
    <item
        android:id="@+id/compose"
        android:alphabeticShortcut="c"
        android:icon="?attr/iconActionCompose"
        android:showAsAction="always"
        android:title="@string/compose_action"/>
    <item
        android:icon="@drawable/ic_show_folders"
        android:title="@string/folder_list_display_mode_label">
        <menu>
            <item
                android:id="@+id/display_all"
                android:icon="?attr/iconMenuClear"
                android:title="@string/folder_list_display_mode_all"/>
            <item
                android:id="@+id/display_1st_class"
                android:icon="?attr/iconMenuClear"
                android:title="@string/folder_list_display_mode_first_class"/>
            <item
                android:id="@+id/display_1st_and_2nd_class"
                android:icon="?attr/iconMenuClear"
                android:title="@string/folder_list_display_mode_first_and_second_class"/>
            <item
                android:id="@+id/display_not_second_class"
                android:icon="?attr/iconMenuClear"
                android:title="@string/folder_list_display_mode_not_second_class"/>
            <item
                android:id="@+id/list_folders"
                android:icon="?attr/iconMenuRefresh"
                android:title="@string/refresh_folders_action"/>
            <item
                android:id="@+id/filter_folders"
                android:icon="?attr/iconMenuSearch"
                android:title="@string/filter_folders_action"/>
        </menu>
    </item>
    <item
        android:id="@+id/empty_trash"
        android:alphabeticShortcut="e"
        android:icon="?attr/iconMenuDelete"
        android:title="@string/empty_trash_action"/>
    <item
        android:id="@+id/settings"
        android:icon="?attr/iconMenuPreferences"
        android:showAsAction="never"
        android:title="@string/preferences_action">
        <menu>
            <item
                android:id="@+id/account_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/account_settings_action"/>
            <item
                android:id="@+id/app_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/global_settings_action"/>
        </menu>
    </item>
    <item
        android:id="@+id/send_messages"
        android:icon="?attr/iconMenuRefresh"
        android:title="@string/send_messages_action"/>
    <item
        android:id="@+id/advanced"
        android:title="@string/advanced">
        <menu>
            <item
                android:id="@+id/compact"
                android:icon="?attr/iconMenuCompact"
                android:title="@string/compact_action"/>
        </menu>
    </item>

</menu>