<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/delete"
        android:title="@string/delete_action"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/mark_as_read"
        android:title="@string/mark_as_read_action"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/archive"
        android:title="@string/archive_action"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/flag"
        android:title="@string/flag_action"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/spam"
        android:title="@string/spam_action"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/move"
        android:title="@string/move_action"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/copy"
        android:title="@string/copy_action"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/send_alternate"
        android:title="@string/send_alternate_action"
        android:showAsAction="ifRoom"
    />
</menu>
