<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/delete"
        android:alphabeticShortcut="q"
        android:title="@string/delete_action"
        android:icon="?attr/iconActionDelete"
        android:showAsAction="always"
    />
    <item
        android:id="@+id/single_message_options"
        android:icon="?attr/iconActionSingleMessageOptions"
        android:showAsAction="ifRoom"
        android:title="@string/single_message_options_action">
        <menu>
            <item
                android:id="@+id/reply"
                android:title="@string/reply_action"/>
            <item
                android:id="@+id/reply_all"
                android:title="@string/reply_all_action"/>
            <item
                android:id="@+id/forward"
                android:title="@string/forward_action"/>
            <item
                android:id="@+id/share"
                android:title="@string/send_alternate_action" />
        </menu>
    </item>
    <item
        android:id="@+id/archive"
        android:title="@string/archive_action"
        android:icon="?attr/iconActionArchive"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/spam"
        android:title="@string/spam_action"
        android:icon="?attr/iconActionSpam"
        android:showAsAction="ifRoom"
    />
    <item
        android:id="@+id/move"
            android:showAsAction="ifRoom"
                android:icon="?attr/iconActionMoveOrCopy"
        android:title="@string/move_action"
    />
    <item
        android:id="@+id/copy"
        android:title="@string/copy_action"
    />
    <item
        android:id="@+id/toggle_unread"
        android:alphabeticShortcut="u"
        android:title="@string/mark_as_unread_action"
        android:showAsAction="never"
    />
    <item
        android:id="@+id/select_text"
        android:title="@string/select_text_action"
        android:showAsAction="never"
    />
    <item
        android:id="@+id/toggle_message_view_theme"
        android:title="@string/message_view_theme_action_dark"
        android:showAsAction="never"
    />
</menu>
