<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:id="@+id/compose"
        android:alphabeticShortcut="c"
        android:title="@string/compose_action"
		android:icon="@drawable/ic_menu_compose"
	/>
	<item
		android:id="@+id/search"
		android:title="@string/search_action"
		android:icon="@android:drawable/ic_search_category_default"
	/>
	<item
		android:id="@+id/add_new_account"
		android:title="@string/add_account_action"
		android:icon="@drawable/ic_menu_add"
	/>
    <item
        android:id="@+id/about"
        android:title="@string/about_action"
        android:icon="@android:drawable/ic_menu_info_details"
    />
	<item
		android:id="@+id/check_mail"
        android:alphabeticShortcut="r"
		android:title="@string/check_mail_action"
		android:icon="@drawable/ic_menu_refresh"
	/>
	<!-- 
		<item android:id="@+id/search"
		android:title="@string/search_action" />
	-->
        <item android:id="@+id/edit_prefs"
        android:title="@string/preferences_action" 
        android:icon="@android:drawable/ic_menu_preferences"
    />
</menu>
